--- a/doc/99100-MacchinaReleaseNotes.page
+++ b/doc/99100-MacchinaReleaseNotes.page
@@ -1,6 +1,48 @@
 Release Notes
 AAAAMacchinaIO
 
+!!!Release 0.6.0 - Developer Preview 6
+
+!!Summary of Changes
+
+  - upgraded POCO to release 1.7.6
+  - make JS/Core, JS/Net, JS/Data and JS/Bridge build on Windows (including VS project files)
+  - allow specifying a script memory limit through the osp.js.memoryLimit bundle property (also for JavaScript Servlets and Server Pages)
+  - fixed memory usage issues in JavaScript
+  - improved script stopping behavior (fix a race condition introduced in 0.5.0)
+  - OSP: added BundleContext::listBundles() and BundleLoader::listBundles() overloads accepting a BundleFilter; BundleRepository: add installBundle() overloads that take a bundle repository path.
+  - various minor fixes
+
+
+!!!Release 0.5.0 - Developer Preview 5
+
+!!Summary of Changes
+
+  - fixed a memory usage issue with Session wrapper in JavaScript servlet engine
+  - handle potentially empty V8 handles returned by *::New()
+  - upgrade bundled Paho to 1.1.0
+  - fixed a bug in RemoteGen: generated serializers and deserializers for classes/structs using more than one level of inheritance would only serialize members of direct base class.
+  - various minor fixes
+
+
+!!!Release 0.4.0 - Developer Preview 4
+
+!!Summary of Changes
+
+  - Script Scheduler improvements (@once) and documentation.
+  - Added POCO Redis library to platform
+  - Moved serial port library to platform
+
+
+!!!Release 0.3.0 - Developer Preview 3
+
+!!Summary of Changes
+
+  - Updated bundled POCO libraries to 1.7.5
+  - Added NetworkEnvironmentService
+  - Remoting improvements
+
+
 !!!Release 0.2.0 - Developer Preview 2
 
 !!Summary of Changes
