--- a/platform/RemotingNG/doc/00300-RemotingNGAttributesReference.page
+++ b/platform/RemotingNG/doc/00300-RemotingNGAttributesReference.page
@@ -3,7 +3,7 @@ Remoting NG
 
 !!! Attribute Syntax
 
-Attributes can be defined either at class or at member function, variable or event level. 
+Attributes can be defined either at class or at member function, variable or event level.
 Attributes must be placed before the respective class or member definition they apply to.
 Attributes are placed within special C++ line comments. A comment defining attributes
 must start with <[//@]>. Multiple attributes can be specified, either using multiple
@@ -37,8 +37,8 @@ Example:
     void myMethod(int i);
 ----
 
-is equivalent to: 
-  	
+is equivalent to:
+
     //@ remote = true, synchronized = true
 ----
 
@@ -47,7 +47,7 @@ If an attribute is specified both at class and member function level, the latter
 Attribute names and values are case sensitive.
 
 Attributes can be specified for parameters, as well. In this case, the syntax is slightly different.
-The attribute name must be the same as the parameter name, prepended with a dollar sign, and the actual 
+The attribute name must be the same as the parameter name, prepended with a dollar sign, and the actual
 attributes are defined as subattributes of the parameter attribute, placed in curly brackets.
 
 Example:
@@ -70,8 +70,8 @@ Assigns an SOAP action to a method. Used by the SOAP transport only.
 !!authenticated
 Enforces authentication for a method or all methods of a class (unless overridden with a
 method-level attribute). If set to true, a transport-specific authentication mechanism
-must be used to provide credentials (e.g., a username and password) with the request. 
-Before the actual method is invoked, the Poco::RemotingNG::Authenticator instance 
+must be used to provide credentials (e.g., a username and password) with the request.
+Before the actual method is invoked, the Poco::RemotingNG::Authenticator instance
 registered with the Listener is used to validate the supplied credentials.
   * level: class/method
   * type: boolean
@@ -82,7 +82,7 @@ registered with the Listener is used to validate the supplied credentials.
 Sets the time how long return values are cached. A cacheExpire value consists
 of a single positive integer number and a single appended unit. Valid units are: ms, s(ec), m(in), h(our)
 If no unit is specified milliseconds are assumed. The entire value must be written within quotes.
-If the value "infinite" is set, data will be cached infinitely. Note that setting this parameter is 
+If the value "infinite" is set, data will be cached infinitely. Note that setting this parameter is
 not enough to enable caching. The <[@cacheResult]> attribute must be specified as well.
   * level: class, method
   * type: "infinite" or an unsigned integer, followed by an optional unit
@@ -91,7 +91,7 @@ Examples: "2h", "4min", "2000ms", "infinite"
 
 
 !!cacheResult
-Enables caching of return values. Will reduce the number of method calls if a remote method always 
+Enables caching of return values. Will reduce the number of method calls if a remote method always
 returns the same value (for a certain time). See also the <[@cacheExpire]> attribute.
   * level: method
   * type: boolean
@@ -107,7 +107,7 @@ For the REST transport, specifies the MIME content type of the request body.
 
 !!direction
 Specifies whether a parameter is input, output or input/output. Whether a parameter is
-input or input/output is normally determined automatically, depending on how the 
+input or input/output is normally determined automatically, depending on how the
 parameter is passed (by value or by const or non-const reference).
 However, a C++ function signature provides no way to designate a
 parameter as output only. The <[@direction]> attribute allows to rectify that.
@@ -115,11 +115,11 @@ parameter as output only. The <[@direction]> attribute allows to rectify that.
   * type: ["in"|"out"|"inout"]
   * default: "in" for parameters passed by value or const reference, "inout" for
     parameters passed by non-const reference
-    
+
 Example:
     //@ $image = {direction = "out"}
     void retrieveImage(const std::string& id, std::vector<char>& image);
-    
+
 Without the <[@direction]> attribute, the <[image]> parameter would be
 first passed to the server, which in this case is unnecessary, and then
 passed back to the client, containing the desired result.
@@ -128,11 +128,11 @@ passed back to the client, containing the desired result.
 
 !!header
 Serialize a parameter in the SOAP header instead of the SOAP body.
-Only useful with the SOAP Transport. Can be set at method parameters only. 
+Only useful with the SOAP Transport. Can be set at method parameters only.
 Can only be specified for parameters that have a complex data, user-defined data type
 (class or struct).
 Note that the <[@soapHeader]> attribute splits method parameters into
-two groups: the header group and the body group. The order value (see the <[@order]> attribute) 
+two groups: the header group and the body group. The order value (see the <[@order]> attribute)
 of all header group members must be lower than the smallest order value of the body group,
 i.e. all header elements are serialized before the body elements.
   * level: parameter
@@ -143,7 +143,7 @@ i.e. all header elements are serialized before the body elements.
 !!filter
 Enable or disable event filters for an event. If enabled, event filters can be installed
 at run-time for the event via an object's Poco::RemotingNG::EventDispatcher::setEventFilter()
-method, and will be honored while dispatching the event. 
+method, and will be honored while dispatching the event.
 If disabled, all installed event filters will be ignored when dispatching the event.
   * level: event
   * type: boolean
@@ -152,19 +152,19 @@ If disabled, all installed event filters will be ignored when dispatching the ev
 
 !!format
 For the REST transport, describes the format of a parameter passed in the request
-or response body. 
+or response body.
   * level: parameter
   * type: string
   * default: "json"
 
 Valid values are:
   * raw: The parameter is passed as a string or raw binary data. Can only be used
-    for simple types, e.g. std::string and std::vector<char>. 
-    This is useful for passing raw binary data as a std::string or std::vector<char> in 
-    the request or response body. If specified, an appropriate content type should 
-    also be specified using the <[@consumes]> or <[@produces]> attribute. 
+    for simple types, e.g. std::string and std::vector<char>.
+    This is useful for passing raw binary data as a std::string or std::vector<char> in
+    the request or response body. If specified, an appropriate content type should
+    also be specified using the <[@consumes]> or <[@produces]> attribute.
   * json: The parameter is formatted as JSON. Can be used for simple and complex types.
-  
+
 Example:
     //@ $file={in=path}
     //@ return={in=body, format=raw}
@@ -174,7 +174,7 @@ Example:
 
 
 !!in
-For the REST transport, defines the location of a parameter. 
+For the REST transport, defines the location of a parameter.
   * level: parameter
   * type: string
   * default: "body"
@@ -199,7 +199,7 @@ Example:
 
 !!inline
 Change the way return values are serialized.
-This attribute can only be set for the return value of a method. 
+This attribute can only be set for the return value of a method.
   * level: return value
   * type: boolean
   * default: true
@@ -239,16 +239,19 @@ are permitted in the method signature if the <[@inline]> attribute is specified.
 
 
 !!mandatory
-Defines if a parameter is mandatory or not. Valid on parameters and member variables. Only evaluated during deserialization. 
+Defines if a parameter or member variable is mandatory or optional. Valid on parameters and member variables.
+Only evaluated during deserialization.
 If not specified, the default value is true.
   * level: parameter/variable
   * type: boolean
   * default: true
 
+See also <[@optional]>. If both <[@mandatory]> and <[@optional]> are specified, <[@mandatory]> takes precedence.
+
 
 !!name
-Rename a method, event, variable or parameter name. Useful for XML based transports, if the used schema requires 
-a name which would be invalid in C++, like a name containing a minus sign. If used on a method, 
+Rename a method, event, variable or parameter name. Useful for XML based transports, if the used schema requires
+a name which would be invalid in C++, like a name containing a minus sign. If used on a method,
 the <[@replyName]> attribute should be specified as well.
   * level: method/parameter/variable
   * type: string
@@ -261,9 +264,9 @@ Assigns an XML namespace to a class, method or parameter. Used by the SOAP Trans
 
 
 !!oneway
-Can be set on methods or events that do not have return values or output parameters. Ignored on all other methods. 
+Can be set on methods or events that do not have return values or output parameters. Ignored on all other methods.
 The <[@oneway]> attribute is an optimization that disables sending any response back to the caller. For example,
-calling a simple method like 
+calling a simple method like
     void foo();
 ----
 
@@ -276,11 +279,22 @@ is guaranteed not to throw an exception, or if it doesn't matter if an exception
   * default: true
 
 
+!!optional
+Defines if a parameter or member variable is optional or mandatory. Valid on parameters and member variables.
+Only evaluated during deserialization.
+If not specified, the default value is false.
+  * level: parameter/variable
+  * type: boolean
+  * default: false
+
+See also <[@mandatory]>. If both <[@mandatory]> and <[@optional]> are specified, <[@mandatory]> takes precedence.
+
+
 !!order
-Enforces that parameters are serialized in a specific order. Useful when an XML schema requires an order which is impossible 
+Enforces that parameters are serialized in a specific order. Useful when an XML schema requires an order which is impossible
 in C++ due to the use of default values.
-Also, the serializer orders member variables (but not parameters) by their name as default. 
-This attribute can be used to change that behavior. 
+Also, the serializer orders member variables (but not parameters) by their name as default.
+This attribute can be used to change that behavior.
 Note that it is not recommended to only partially specify the order element. Omitted or duplicate
 order values lead to undefined results.
   * level: parameter/variable
@@ -312,10 +326,10 @@ Example:
 !!permission
 Specifies a permission (in the form of a string) that is required to invoke the method
 or all methods of a class (if specified on class level).
-If specified and set to a non-empty string, the Poco::RemotingNG::Authorizer 
+If specified and set to a non-empty string, the Poco::RemotingNG::Authorizer
 instance registered with the Listener is used to verify that the user identified by
 the supplied credentials has the specific permission. Names and semantics of the
-permission string are entirely up to the supplied Poco::RemotingNG::Authorizer 
+permission string are entirely up to the supplied Poco::RemotingNG::Authorizer
 implementation.
   * level: class/method
   * type: string
@@ -337,7 +351,7 @@ class, method or event.
 
 
 !!replyName
-Allows to rename the reply structure (or XML element) name returned by a method. 
+Allows to rename the reply structure (or XML element) name returned by a method.
 The default is the name of the function with <[Reply]> appended
 (e.g., <[getData]> returns a structure named <[getDataReply]>).
   * level: method/event
@@ -345,7 +359,7 @@ The default is the name of the function with <[Reply]> appended
 
 
 !!serialize
-Enable generation of Serializer and Deserializer classes for the given class. Note that the classes must follow 
+Enable generation of Serializer and Deserializer classes for the given class. Note that the classes must follow
 a certain coding style for this to work. Refer to the Remoting user manual for more information.
 If a class is serializable, all super classes must have the "serialize" attribute as well.
   * level: class
@@ -365,8 +379,8 @@ or both (default).
 
 !!type
 Specify whether a parameter is serialized as XML element or XML attribute (XML-based transports only).
-Must be either "attr" or "elem". The default value is "elem". 
-Note that "attr" can not be set on complex types or vectors. 
+Must be either "attr" or "elem". The default value is "elem".
+Note that "attr" can not be set on complex types or vectors.
 As a general rule of thumb, "elem" should be used whenever possible, "attr" only where XML schema
 restrictions require it.
   * level: parameter
